fix design on mobile

--- a/css/wordl_style.css
+++ b/css/wordl_style.css
@@ -291,6 +291,11 @@ header .menu-btn {
         max-width: 200px;
         height: 200px;
     }
+    .keyboard {
+        width: fit-content;
+        grid-template-columns: repeat(30, 0.35rem);
+        grid-template-rows: repeat(3, 2.6rem);
+    }
 }
 
 @media (min-width: 576px) {
@@ -303,6 +308,11 @@ header .menu-btn {
     #logo {
         max-width: 250px;
         height: 250px;
+    }
+    .keyboard {
+        width: fit-content;
+        grid-template-columns: repeat(30, 0.6rem);
+        grid-template-rows: repeat(3, 2.7rem);
     }
 }
 
@@ -317,6 +327,11 @@ header .menu-btn {
         max-width: 300px;
         height: 300px;
     }
+    .keyboard {
+        width: fit-content;
+        grid-template-columns: repeat(30, 0.85rem);
+        grid-template-rows: repeat(3, 2.8rem);
+    }
 }
 
 @media (min-width: 992px) {
@@ -330,6 +345,11 @@ header .menu-btn {
         max-width: 350px;
         height: 350px;
     }
+    .keyboard {
+        width: fit-content;
+        grid-template-columns: repeat(30, 1.25rem);
+        grid-template-rows: repeat(3, 2.9rem);
+    }
 }
 
 @media (min-width: 1200px) {
@@ -342,5 +362,10 @@ header .menu-btn {
     #logo {
         max-width: 400px;
         height: 400px;
+    }
+    .keyboard {
+        width: fit-content;
+        grid-template-columns: repeat(30, 1.5rem);
+        grid-template-rows: repeat(3, 3rem);
     }
 }
